--- a/cloud_game_maker_server.csproj
+++ b/cloud_game_maker_server.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.5.3.7"/>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="*"/>
+  </ItemGroup>
 </Project>
