--- a/CloudGameMakerServer/WebApi/WebApi.csproj
+++ b/CloudGameMakerServer/WebApi/WebApi.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
+    <PackageReference Include="AWSSDK.S3" Version="3.5.3.7" />
   </ItemGroup>
 
 
