--- a/CloudGameMakerServer/WebApi/WebApi.csproj
+++ b/CloudGameMakerServer/WebApi/WebApi.csproj
@@ -9,5 +9,9 @@
     <PackageReference Include="AWSSDK.S3" Version="3.5.3.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
 
 </Project>
