--- a/CloudGameMakerServer/WebApi/WebApi.csproj
+++ b/CloudGameMakerServer/WebApi/WebApi.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
     <PackageReference Include="AWSSDK.S3" Version="3.5.3.7" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
