--- a/CloudGameMakerServer/Core/Core.csproj
+++ b/CloudGameMakerServer/Core/Core.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.5.3.10" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
