--- a/CloudGameMakerServer/WebApi/WebApi.csproj
+++ b/CloudGameMakerServer/WebApi/WebApi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
